# vlm-mppi

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements-vllm.txt  requirements.txt
data/: .gitignore
docs/: architecture.md  licensing.md  nix-setup.md
examples/: 01_test_embodied_r1.py  01_test_vlm_basic.py  02_benchmark.py  02_vlm_keypoint_planner.py  03_vlm_client_vllm.py  04_vlm_mppi_loop.py  05_demo_handover.py
prompts/: multi_step.txt  single_step.txt
scripts/: start_vllm_server.py
tests/: test_parsing.py  test_vlm_output_parsing.py
vlm_mppi/: __init__.py  cli.py  config.py  cost_reflection.py  keypoint_utils.py  model.py  mppi_interface.py  projection.py  viz.py  vlm_planner.py
