[project]
name = "vlm-mppi"
version = "0.1.0"
description = "Embodied-R1 spatial reasoning for model-predictive robot control"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Maxime Sabbah" }]

dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.51",
    "accelerate>=0.30",
    "qwen-vl-utils[decord]",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
vllm = ["vllm>=0.6"]

[project.scripts]
vlm-mppi-test = "vlm_mppi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
